--- a/chatbot/templates/base.html
+++ b/chatbot/templates/base.html
@@ -13,7 +13,7 @@
         <!--====== Favicon Icon ======-->
         <link
             rel="shortcut icon"
-            href="{% static 'images/favicon.png' %}"
+            href="{% static 'images/logoicon.png' %}"
             type="image/png"
         />
 
@@ -72,12 +72,91 @@
         </div>
 
         <!--====== PRELOADER PART ENDS ======-->
+         <!-- navbar area -->
         {% block content %} {% endblock content %}
         <!--====== BACK TOP TOP PART START ======-->
 
         <a href="#" class="back-to-top"><i class="lni-chevron-up"></i></a>
 
         <!--====== BACK TOP TOP PART ENDS ======-->
+
+
+    <!--====== FOOTER PART START ======-->
+
+    <footer id="footer" class="footer-area pt-120">
+        <div class="container">
+            <div class="subscribe-area wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <div class="text-center">
+                            <h2 >Upgrade your Customer Experience with Conversational AI</h2>
+                            <!-- <br>
+                            <button class="main-btn">Subscribe</button> -->
+                        </div>
+                 <!-- row -->
+            </div> <!-- subscribe area -->
+            <div class="footer-widget pb-100 ">
+                <div class="row justify-content-center">
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="footer-about mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+                            <a class="logo" href="#">
+                                <img src="{% static 'images/logo.png' %}" alt="logo">
+                            </a>
+                            <p class="text">Smart working is better than Hard working,Utilising it for greater achievement</p>
+                            <ul class="social">
+                                <li><a href="https://www.facebook.com/tinoslabs/"><i class="lni-facebook-filled"></i></a></li>
+
+                                <li><a href="#"><i class="lni-instagram-filled"></i></a></li>
+
+                            </ul>
+                        </div> <!-- footer about -->
+                    </div>
+                    <div class="col-lg-3 col-md-5 col-sm-5">
+                        <div class="footer-link d-flex mt-50 justify-content-md-between">
+                            <!-- footer wrapper -->
+                            <div class="link-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
+                                <div class="footer-title">
+                                    <h4 class="title">Features</h4>
+                                </div>
+                                <ul class="link">
+                                    <li><a href="multi-channel">Multi-Channel</a></li>
+                                    <li><a href="linguist">Linguist Pro</a></li>
+                                    <li><a href="voice-enabled">Voice Enabled </a></li>
+
+                                </ul>
+                            </div> <!-- footer wrapper -->
+                        </div> <!-- footer link -->
+                    </div>
+                    <div class="col-lg-3 col-md-5 col-sm-5">
+                        <div class="footer-contact mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
+                            <div class="footer-title">
+                                <h4 class="title">Contact Us</h4>
+                            </div>
+                            <ul class="contact">
+                                <li>079073 46442</li>
+                                <li>tinoslabs@gmail.com</li>
+
+                                <li>Technolodge , Kakkoor , Piravom <br> Kerala 686662</li>
+                            </ul>
+                        </div> <!-- footer contact -->
+                    </div>
+                </div> <!-- row -->
+            </div> <!-- footer widget -->
+            <div class="footer-copyright">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="copyright d-sm-flex justify-content-center">
+                            <div class="copyright-content">
+                                <p class="text">KingSpin AI <a href="/" ></a></p>
+                                <p class="text">Powered by <a href="http://www.tinos.co.in/" rel="nofollow">Tinos Software & Security Solutions</a></p>
+                            </div> <!-- copyright content -->
+                        </div> <!-- copyright -->
+                    </div>
+                </div> <!-- row -->
+            </div> <!-- footer copyright -->
+        </div> <!-- container -->
+        <div id="particles-2"></div>
+    </footer>
+
+    <!--====== FOOTER PART ENDS ======-->
 
         <!--====== PART START ======-->
 
