--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -10,7 +10,6 @@ Kingspin - AI
 
 
     <!--====== HEADER PART START ======-->
-    
     <header class="header-area">
         <div class="navbar-area">
             <div class="container">
@@ -35,7 +34,7 @@ Kingspin - AI
                                         <a class="page-scroll" href="#features">Features</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#about">About</a>
+                                        <a class="page-scroll"  href="#about">About</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#facts">Why</a>
@@ -46,7 +45,7 @@ Kingspin - AI
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#blog">Blog</a>
                                     </li> -->
-                                    
+
                                     {% if not user.is_authenticated %}
                                         <li class="nav-item">
                                             <a class="" href="{% url 'login' %}">Login</a>
@@ -54,9 +53,9 @@ Kingspin - AI
                                     {% endif %}
                                                                         </ul>
                             </div> <!-- navbar collapse -->
-                            
+
                             <div class="navbar-btn d-none d-sm-inline-block">
-                                
+
                                 {% if user.is_authenticated %}
                                     <a class="main-btn" data-scroll-nav="0" href="{%url 'user:dashboard'%}">DASHBOARD</a>
                                 {% else %}
@@ -68,8 +67,7 @@ Kingspin - AI
                     </div>
                 </div> <!-- row -->
             </div> <!-- container -->
-        </div> <!-- navbar area -->
-        
+        </div>
         <div id="home" class="header-hero bg_cover" style="background-image: url({% static 'images/banner-bg.svg' %})">
             <div class="container">
                 <div class="row justify-content-center">
@@ -195,11 +193,25 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title"><span>Chatbot for </span> Web</h3>
+                            <h3 class="title">Multi-Channel<span> Chatbot </span> </h3>
                         </div> <!-- section title -->
                         <p class="text">
-                            Upgrade your website with intelligent conversational agent to deliver high-performing customer experiences.
-                            Simple and reliable methods for easy integration 
+                            Reach customers on messaging platforms they use. Build Whatsapp Chatbots, Website Chat Bots, Facebook Messenger Bots at scale.
+                        </p><br>
+                        <div class="row justify-content-center">
+
+                          <i><img class="gap" src="{% static 'images/whatsapp (2).png' %}" alt="shape" width="42" height="42"></i>
+                            <i><img class="gap" src="{% static 'images/icons8-facebook-messenger-48.png' %}" alt="shape" width="42" height="42"></i>
+                            <i><img class="gap" src="{% static 'images/paper-plane.png' %}" alt="shape" width="42" height="42"></i>
+                            <i><img class="gap" src="{% static 'images/icons8-chat-50.png' %}" alt="shape" width="42" height="42"></i>
+
+
+                        </div><br>
+                        <p>
+                            <form action="multi-channel">
+                                 <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
+
+                            </form>
                         </p>
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
@@ -218,6 +230,78 @@ Kingspin - AI
     
     <!--====== ABOUT PART ENDS ======-->
     
+    <!--====== ABOUT PART START ======-->
+
+      <section class="about-area pt-70">
+        <div class="about-shape-2">
+            <img src="{% static 'images/about-shape-2.svg' %}" alt="shape">
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 order-lg-last">
+                    <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <div class="section-title">
+                            <div class="line"></div>
+                            <h3 class="title">Linguist <span> Pro</span></h3>
+                        </div> <!-- section title -->
+                        <p class="text">
+                            Build powerful multilingual virtual assistants with Linguist Pro to converse with your users in their preferred language. It combines translation with custom native module for better user experiences
+                        </p><br>
+                        <p>
+                            <form action="linguist">
+                                <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
+                            </form>
+                        </p>
+                        <!-- <a href="#" class="main-btn">Try it Free</a> -->
+                    </div> <!-- about content -->
+                </div>
+                <div class="col-lg-6 order-lg-first">
+                    <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <img src="{% static 'images/undraw_Chat_re_re1u.svg' %}" alt="about">
+                    </div> <!-- about image -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
+
+    <!--====== ABOUT PART ENDS ======-->
+
+
+    <!--====== ABOUT PART ENDS ======-->
+
+        <section id="about" class="about-area pt-70">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <div class="section-title">
+                            <div class="line"></div>
+                            <h3 class="title">Voice Enabled<span> Functionality </span> </h3>
+                        </div> <!-- section title -->
+                        <p class="text">
+                            Integrate AI-powered IVR with Contact Centers to interact with customers naturally via voice to resolve queries faste </p><br>
+                        <p>
+                            <form action="voice-enabled">
+                                <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
+                            </form>
+                        </p>
+                        <!-- <a href="#" class="main-btn">Try it Free</a> -->
+                    </div> <!-- about content -->
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <img src="{% static 'images/undraw_speech_to_text_9uir.svg' %}" alt="about">
+                    </div> <!-- about image -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+        <div class="about-shape-1">
+            <img src="{% static 'images/about-shape-1.svg' %}" alt="shape">
+        </div>
+    </section>
+
+    <!--====== ABOUT PART ENDS ======-->
+
     <!--====== ABOUT PART START ======-->
     
     <section class="about-area pt-70">
@@ -312,7 +396,7 @@ Kingspin - AI
                             <div class="col-4">
                                 <div class="single-counter counter-color-1 d-flex align-items-center justify-content-center">
                                     <div class="counter-items text-center">
-                                        <span class="count"><span class="counter">125</span>K</span>
+                                        <span class="count"><span class="counter">12</span></span>
                                         <p class="text">Downloads</p>
                                     </div>
                                 </div> <!-- single counter -->
@@ -320,7 +404,7 @@ Kingspin - AI
                             <div class="col-4">
                                 <div class="single-counter counter-color-2 d-flex align-items-center justify-content-center">
                                     <div class="counter-items text-center">
-                                        <span class="count"><span class="counter">87</span>K</span>
+                                        <span class="count"><span class="counter">8</span></span>
                                         <p class="text">Active Users</p>
                                     </div>
                                 </div> <!-- single counter -->
@@ -624,94 +708,6 @@ Kingspin - AI
     </section>
      -->
     <!--====== BLOG PART ENDS ======-->
-    
-    <!--====== FOOTER PART START ======-->
-    
-    <footer id="footer" class="footer-area pt-120">
-        <div class="container">
-            <div class="subscribe-area wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <div class="text-center">
-                            <h2 >Upgrade your Customer Experience with Conversational AI</h2>
-                            <!-- <br>
-                            <button class="main-btn">Subscribe</button> -->
-                        </div>
-                 <!-- row -->
-            </div> <!-- subscribe area -->
-            <div class="footer-widget pb-100">
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-8">
-                        <div class="footer-about mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-                            <a class="logo" href="#">
-                                <img src="{% static 'images/logo.svg' %}" alt="logo">
-                            </a>
-                            <p class="text">Lorem ipsum dolor sit amet consetetur sadipscing elitr, sederfs diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
-                            <ul class="social">
-                                <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-instagram-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
-                            </ul>
-                        </div> <!-- footer about -->
-                    </div>
-                    <div class="col-lg-5 col-md-7 col-sm-7">
-                        <div class="footer-link d-flex mt-50 justify-content-md-between">
-                            <div class="link-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
-                                <div class="footer-title">
-                                    <h4 class="title">Quick Link</h4>
-                                </div>
-                                <ul class="link">
-                                    <li><a href="#">Road Map</a></li>
-                                    <li><a href="#">Privacy Policy</a></li>
-                                    <li><a href="#">Refund Policy</a></li>
-                                    <li><a href="#">Terms of Service</a></li>
-                                    <li><a href="#">Pricing</a></li>
-                                </ul>
-                            </div> <!-- footer wrapper -->
-                            <div class="link-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
-                                <div class="footer-title">
-                                    <h4 class="title">Resources</h4>
-                                </div>
-                                <ul class="link">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Page</a></li>
-                                    <li><a href="#">Portfolio</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contact</a></li>
-                                </ul>
-                            </div> <!-- footer wrapper -->
-                        </div> <!-- footer link -->
-                    </div>
-                    <div class="col-lg-3 col-md-5 col-sm-5">
-                        <div class="footer-contact mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
-                            <div class="footer-title">
-                                <h4 class="title">Contact Us</h4>
-                            </div>
-                            <ul class="contact">
-                                <li>+809272561823</li>
-                                <li>info@gmail.com</li>
-                                <li>www.yourweb.com</li>
-                                <li>123 Stree New York City , United <br> States Of America 750.</li>
-                            </ul>
-                        </div> <!-- footer contact -->
-                    </div>
-                </div> <!-- row -->
-            </div> <!-- footer widget -->
-            <div class="footer-copyright">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="copyright d-sm-flex justify-content-center">
-                            <div class="copyright-content">
-                                <p class="text">KingSpin AI <a href="https://.com" rel="nofollow"></a></p>
-                                <p class="text">Powered by <a href="https://.com" rel="nofollow">Tinos Software & Security Solutions</a></p>
-                            </div> <!-- copyright content -->
-                        </div> <!-- copyright -->
-                    </div>
-                </div> <!-- row -->
-            </div> <!-- footer copyright -->
-        </div> <!-- container -->
-        <div id="particles-2"></div>
-    </footer>
-    
-    <!--====== FOOTER PART ENDS ======-->
+
 
 {% endblock content %}
