--- a/chatbot/templates/user/base.html
+++ b/chatbot/templates/user/base.html
@@ -16,6 +16,11 @@
         ></script>
         <!-- General CSS Files -->
         <link
+            rel="shortcut icon"
+            href="{% static 'images/logoicon.png' %}"
+            type="image/png"
+        />
+        <link
             rel="stylesheet"
             href="{% static 'user/modules/bootstrap/css/bootstrap.min.css' %}"
         />
