--- a/unicorn/templates/unicorn/chatbot-settings.html
+++ b/unicorn/templates/unicorn/chatbot-settings.html
@@ -142,7 +142,7 @@
                             {% endif %}
                         </div>
                         <br>
-                        <div class="section-title">Facebook</div>
+                        <div class="section-title mt-0">Facebook</div>
                         {% if unicorn.errors.facebook_key %}
                             <div class="unicorn-errors ">
                                 <div class="mb-2">
@@ -191,7 +191,7 @@
                             {% endif %}
                         </div>
                         <br>
-                        <div class="section-title">Whatsapp</div>
+                        <div class="section-title mt-0">Whatsapp</div>
                         {% if unicorn.errors.whatsapp_key %}
                             <div class="unicorn-errors ">
                                 <div class="mb-2">
