partially updated 3 pages

--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -202,7 +202,7 @@ Kingspin - AI
 
                           <i><img class="gap" src="{% static 'images/whatsapp (2).png' %}" alt="shape" width="42" height="42"></i>
                             <i><img class="gap" src="{% static 'images/icons8-facebook-messenger-48.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/paper-plane.png' %}" alt="shape" width="42" height="42"></i>
+                            <i><img class="gap" src="{% static 'images/icons8-telegram-app-48.png' %}" alt="shape" width="42" height="42"></i>
                             <i><img class="gap" src="{% static 'images/icons8-chat-50.png' %}" alt="shape" width="42" height="42"></i>
 
 
