--- a/chatbot/templates/linguist.html
+++ b/chatbot/templates/linguist.html
@@ -24,16 +24,16 @@ Kingspin - AI
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item active">
-                                        <a class="page-scroll" style="color: black" href="#home">Home</a>
+                                        <a class="page-scroll" style="color: black" href="/">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" style="color: black" href="#features">Features</a>
+                                        <a class="page-scroll" style="color: black" href="/">Features</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" style="color: black" href="#about">About</a>
+                                        <a class="page-scroll" style="color: black" href="/">About</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" style="color: black" href="#facts">Why</a>
+                                        <a class="page-scroll" style="color: black" href="/">Why</a>
                                     </li>
                                     <!-- <li class="nav-item">
                                         <a class="page-scroll" href="#team">Team</a>
@@ -76,32 +76,17 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Multi-Channel<span> Chatbot </span> </h3>
+                            <h3 class="title"><span>Never let language </span>be a barrier </h3>
                         </div> <!-- section title -->
                         <p class="text">
-                            Reach customers on messaging platforms they use. Build Whatsapp Chatbots, Website Chat Bots, Facebook Messenger Bots at scale.
-                        </p><br>
-                        <div class="row justify-content-center">
-
-                          <i><img class="gap" src="{% static 'images/whatsapp (2).png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-facebook-messenger-48.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/paper-plane.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-chat-50.png' %}" alt="shape" width="42" height="42"></i>
-
-
-                        </div><br>
-                        <p>
-                            <form action="multi-channel">
-                                 <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
-
-                            </form>
+                            Build powerful multilingual virtual assistants with Linguist Pro to converse with your users in their preferred language.
                         </p>
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="{% static 'images/chat_bot.svg' %}" alt="about">
+                        <img src="{% static 'images/MultilingualBlogHeader.png' %}" height="250" width="700" alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
@@ -125,15 +110,10 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Linguist <span> Pro</span></h3>
+                            <h3 class="title"><span>Deliver</span> Multilingual  <span> Customer Experiences</span></h3>
                         </div> <!-- section title -->
                         <p class="text">
-                            Build powerful multilingual virtual assistants with Linguist Pro to converse with your users in their preferred language. It combines translation with custom native module for better user experiences
-                        </p><br>
-                        <p>
-                            <form action="linguist">
-                                <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
-                            </form>
+                           Leverage Linguist Pro - Lingspinai's Hybrid Language model to deliver human-like conversations in your customer's preferred language with unmatched accuracy.
                         </p>
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
@@ -158,32 +138,17 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Multi-Channel<span> Chatbot </span> </h3>
+                            <h3 class="title"> <span> Languages </span> Supported </h3>
                         </div> <!-- section title -->
                         <p class="text">
-                            Reach customers on messaging platforms they use. Build Whatsapp Chatbots, Website Chat Bots, Facebook Messenger Bots at scale.
+                            Bring the best of both worlds with custom language capabilities and deliver superior performance. Linguist Pro acts as a correction layer addressing translation gaps.
                         </p><br>
-                        <div class="row justify-content-center">
-
-                          <i><img class="gap" src="{% static 'images/whatsapp (2).png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-facebook-messenger-48.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/paper-plane.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-chat-50.png' %}" alt="shape" width="42" height="42"></i>
-
-
-                        </div><br>
-                        <p>
-                            <form action="multi-channel">
-                                 <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
-
-                            </form>
-                        </p>
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="{% static 'images/chat_bot.svg' %}" alt="about">
+                        <img src="{% static 'images/language_supported.png' %}"   alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
