--- a/chatbot/templates/multi-channel.html
+++ b/chatbot/templates/multi-channel.html
@@ -24,16 +24,16 @@ Kingspin - AI
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item active">
-                                        <a class="page-scroll" style="color: black" href="/">Home</a>
+                                        <a class="page-scroll" style="color: black" href="#home">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" style="color: black" href="/">Features</a>
+                                        <a class="page-scroll" style="color: black" href="#features">Features</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" style="color: black" href="/">About</a>
+                                        <a class="page-scroll" style="color: black" href="#about">About</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" style="color: black" href="/">Why</a>
+                                        <a class="page-scroll" style="color: black" href="#facts">Why</a>
                                     </li>
                                     <!-- <li class="nav-item">
                                         <a class="page-scroll" href="#team">Team</a>
@@ -76,26 +76,12 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Multi-Channel<span> Chatbot </span> </h3>
+                            <h3 class="title">Multi-Channel <span> Engagement at Scale </span> </h3>
                         </div> <!-- section title -->
                         <p class="text">
-                            Reach customers on messaging platforms they use. Build Whatsapp Chatbots, Website Chat Bots, Facebook Messenger Bots at scale.
+                            Customer expectations are higher than ever. Give your customers the experience they deserve, wherever they are.
                         </p><br>
-                        <div class="row justify-content-center">
 
-                          <i><img class="gap" src="{% static 'images/whatsapp (2).png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-facebook-messenger-48.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/paper-plane.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-chat-50.png' %}" alt="shape" width="42" height="42"></i>
-
-
-                        </div><br>
-                        <p>
-                            <form action="multi-channel">
-                                 <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
-
-                            </form>
-                        </p>
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
@@ -125,27 +111,33 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Linguist <span> Pro</span></h3>
+                            <h3 class="title">Build Once <span>  Deploy Anywhere</span></h3>
                         </div> <!-- section title -->
                         <p class="text">
-                            Build powerful multilingual virtual assistants with Linguist Pro to converse with your users in their preferred language. It combines translation with custom native module for better user experiences
+                            Easily streamline your support across multiple channels and provide two-way conversations that are natural, personalized, and contextual from one interaction to the next.
                         </p><br>
-                        <p>
-                            <form action="linguist">
-                                <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
-                            </form>
-                        </p>
+
+                        <div class="row justify-content-center">
+
+                          <i><img class="gap" src="{% static 'images/whatsapp (2).png' %}" alt="shape" width="42" height="42"></i>
+                            <i><img class="gap" src="{% static 'images/icons8-facebook-messenger-48.png' %}" alt="shape" width="42" height="42"></i>
+                            <i><img class="gap" src="{% static 'images/paper-plane.png' %}" alt="shape" width="42" height="42"></i>
+                            <i><img class="gap" src="{% static 'images/icons8-chat-50.png' %}" alt="shape" width="42" height="42"></i>
+
+
+                        </div>
+
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="{% static 'images/undraw_Chat_re_re1u.svg' %}" alt="about">
+                        <img src="{% static 'images/undraw_Code_thinking_re_gka2.svg' %}" alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
         </div> <!-- container -->
-    </section>
+    </section><br><br>
 
     <!--====== ABOUT PART ENDS ======-->
 
@@ -158,32 +150,25 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Multi-Channel<span> Chatbot </span> </h3>
+                            <h3 class="title">Native & Web <span> Integrations </span> </h3>
                         </div> <!-- section title -->
+
                         <p class="text">
-                            Reach customers on messaging platforms they use. Build Whatsapp Chatbots, Website Chat Bots, Facebook Messenger Bots at scale.
+
+                           Easy integration - plug & play.<br>
+
+                            Accelerate time to market.<br>
+
+                            Seamless, uninterrupted experiences across different browsers and devices.
                         </p><br>
-                        <div class="row justify-content-center">
-
-                          <i><img class="gap" src="{% static 'images/whatsapp (2).png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-facebook-messenger-48.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/paper-plane.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-chat-50.png' %}" alt="shape" width="42" height="42"></i>
 
 
-                        </div><br>
-                        <p>
-                            <form action="multi-channel">
-                                 <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
-
-                            </form>
-                        </p>
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="{% static 'images/chat_bot.svg' %}" alt="about">
+                        <img src="{% static 'images/undraw_website_builder_bxki.svg' %}" alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
