--- a/chatbot/templates/voice-enabled.html
+++ b/chatbot/templates/voice-enabled.html
@@ -76,26 +76,12 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Multi-Channel<span> Chatbot </span> </h3>
+                            <h3 class="title"><span> Enhance with  </span> Conversational IVR </h3>
                         </div> <!-- section title -->
                         <p class="text">
-                            Reach customers on messaging platforms they use. Build Whatsapp Chatbots, Website Chat Bots, Facebook Messenger Bots at scale.
+                            Integrate AI-powered IVR with Contact Centers to interact with customers naturally via voice to resolve queries faster.
+
                         </p><br>
-                        <div class="row justify-content-center">
-
-                          <i><img class="gap" src="{% static 'images/whatsapp (2).png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-facebook-messenger-48.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/paper-plane.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-chat-50.png' %}" alt="shape" width="42" height="42"></i>
-
-
-                        </div><br>
-                        <p>
-                            <form action="multi-channel">
-                                 <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
-
-                            </form>
-                        </p>
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
@@ -125,16 +111,15 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Linguist <span> Pro</span></h3>
+                            <h3 class="title"><span>Increase</span> Customer  <span> Satisfaction</span></h3>
                         </div> <!-- section title -->
                         <p class="text">
-                            Build powerful multilingual virtual assistants with Linguist Pro to converse with your users in their preferred language. It combines translation with custom native module for better user experiences
+                            Boost Net Promoter Score (NPS) with Conversational IVR by maintaining high First Call Resolution (FCR) rate
+                            .Interactive and inclusive experience for customer delight.
+                            Repetition of information from customer is not required
+
                         </p><br>
-                        <p>
-                            <form action="linguist">
-                                <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
-                            </form>
-                        </p>
+
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
@@ -147,51 +132,7 @@ Kingspin - AI
         </div> <!-- container -->
     </section>
 
-    <!--====== ABOUT PART ENDS ======-->
 
-        <!--====== ABOUT PART START ======-->
-
-    <section id="about" class="about-area pt-70">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <div class="section-title">
-                            <div class="line"></div>
-                            <h3 class="title">Multi-Channel<span> Chatbot </span> </h3>
-                        </div> <!-- section title -->
-                        <p class="text">
-                            Reach customers on messaging platforms they use. Build Whatsapp Chatbots, Website Chat Bots, Facebook Messenger Bots at scale.
-                        </p><br>
-                        <div class="row justify-content-center">
-
-                          <i><img class="gap" src="{% static 'images/whatsapp (2).png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-facebook-messenger-48.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/paper-plane.png' %}" alt="shape" width="42" height="42"></i>
-                            <i><img class="gap" src="{% static 'images/icons8-chat-50.png' %}" alt="shape" width="42" height="42"></i>
-
-
-                        </div><br>
-                        <p>
-                            <form action="multi-channel">
-                                 <button type="submit" class="btn btn-outline-primary rounded-pill">Learn More</button>
-
-                            </form>
-                        </p>
-                        <!-- <a href="#" class="main-btn">Try it Free</a> -->
-                    </div> <!-- about content -->
-                </div>
-                <div class="col-lg-6">
-                    <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="{% static 'images/chat_bot.svg' %}" alt="about">
-                    </div> <!-- about image -->
-                </div>
-            </div> <!-- row -->
-        </div> <!-- container -->
-        <div class="about-shape-1">
-            <img src="{% static 'images/about-shape-1.svg' %}" alt="shape">
-        </div>
-    </section>
 
     <!--====== ABOUT PART ENDS ======-->
 {% endblock content %}
