--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -145,7 +145,7 @@ Kingspin - AI
                         </div>
                         <div class="services-content mt-30">
                             <h4 class="services-title"><a href="#">Designed for Perfection</a></h4>
-                            <p class="text">Kingspinai’s NLU architecture is built on a combination of modules such as Language detection, ASR classification, Context Manager, that work in tandem with deep learning-based encoders to accurately understand natural language and handle user queries with higher precision.</p>
+                            <p class="text">Kingspinai’s NLU architecture is built on a combination of modules such as Language detection, classification, that work in tandem with machine learning models to accurately understand natural language and handle user queries with higher precision.</p>
                             <!--<a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>-->
                         </div>
                     </div> <!-- single services -->
@@ -317,7 +317,7 @@ Kingspin - AI
                             <h3 class="title">NLU powered <span> with Essential Features</span></h3>
                         </div> <!-- section title -->
                         <p class="text">
-                            NLU architecture is built on a combination of modules such as Language detection, ASR classification, Context Manager, that work in tandem with deep learning-based encoders to accurately understand natural language and handle user queries with higher precision.
+                            NLU architecture is built on a combination of modules such as Language detection, classification, that work in tandem with machine learning models to accurately understand natural language and handle user queries with higher precision.
                         </p>
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
